Upgraded to meteor 0.8.

--- a/client/admin/admin/admin.html
+++ b/client/admin/admin/admin.html
@@ -8,7 +8,7 @@
         }
     </style>
     {{#if isAdmin}}
-        {{> admin-index}}
+        {{> adminIndex}}
     {{else}}
         <div class="jeeves-admin-banner">
             <img src="admin/desktop-banner.png" class="desktop-banner">
