--- a/client/admin/admin/adminIndex.html
+++ b/client/admin/admin/adminIndex.html
@@ -1,4 +1,4 @@
-<template name="admin-index">
+<template name="adminIndex">
     <script src="slidebars.min.js"></script>
     <link rel="stylesheet" href="slidebars.min.css">
     <div class="col-md2 sidebar-mobile" data-spy="affix">
