--- a/client/admin/screen/editScreen/editScreen.html
+++ b/client/admin/screen/editScreen/editScreen.html
@@ -57,6 +57,7 @@
                             </div>
                         </div>
                         {{/each}}
+                    </form>
                     {{else}}
                     <h1>There are no active screens available.</h1>
                     {{/if}}
