updated meteor to v1.1.01 and fixed the beer time and druppel slide. The app builds and apparently works to as far as I an see.

--- a/client/lobby/lobby.html
+++ b/client/lobby/lobby.html
@@ -22,10 +22,10 @@
                     <div class="form-group">
                         <label for="category">Category</label>
                         <select id="category">
-                            <option {{selected "all"}}>all</option>
-                            <option {{selected "dev"}}>dev</option>
-                            <option {{selected "sales"}}>sales</option>
-                            <option {{selected "hrm"}}>HRM</option>
+                            <option selected="{{selected "all"}}">all</option>
+                            <option selected="{{selected "dev"}}">dev</option>
+                            <option selected="{{selected "sales"}}">sales</option>
+                            <option selected="{{selected "hrm"}}">HRM</option>
                         </select>
                     </div>
                     <div class="form-group">
